k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homerun2-omni-pitcher
  labels:
    app: homerun2-omni-pitcher
    app.kubernetes.io/name: homerun2-omni-pitcher
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: homerun2-omni-pitcher
